# Muse-Engine

./: .clang-format  CMakeLists.txt  LICENSE  README.md
samples/: CMakeLists.txt
samples/sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/events/private/: event.cpp  event_handler.cpp
src/events/public/: event.h  event_handler.h
src/graphics/: CMakeLists.txt
src/graphics/private/: animation.cpp  camera.cpp  cube_map.cpp  glad.c  material.cpp  material_manager.cpp  mesh.cpp  mesh_manager.cpp  sampler.cpp  shader_library.cpp  shader_system.cpp  skeleton.cpp  texture.cpp  texture_manager.cpp  transform.cpp  vertex_descriptor.h  window.cpp
src/graphics/private/animation/: animation.cpp  skeleton.cpp
src/graphics/private/lights/: ambient_light.cpp  directional_light.cpp  light.cpp  spot_light.cpp
src/graphics/public/: animation.h  bone.h  buffer.h  camera.h  cube_map.h  glad.h  keyframe.h  material.h  material_manager.h  mesh.h  mesh_manager.h  render_target.h  sampler.h  shader_library.h  shader_system.h  skeleton.h  stb_image.h  texture.h  texture_format.h  texture_manager.h  transform.h  vertex.h  weight.h  window.h
src/graphics/public/animation/: animation.h  bone.h  keyframe.h  skeleton.h
src/graphics/public/lights/: ambient_light.h  directional_light.h  light.h  spot_light.h
src/log/: CMakeLists.txt
src/log/private/: formatter.cpp  logger.cpp
src/log/public/: format.h  formatter.h  log_level.h  logger.h
src/utils/private/: file_manager.cpp
src/utils/public/: file_manager.h  include_glm.h  matrix4.h  quaternion.h  utils.h  vector2.h  vector3.h  vector4.h
